20240509 쿠키적용 및 ID

--- a/Omok/src/main/webapp/main.html
+++ b/Omok/src/main/webapp/main.html
@@ -7,7 +7,7 @@
 <body>
     <h1>메인 페이지</h1>
     <a href="/Omok/createRoom.html"><button>방 생성</button></a>
-    <a href="/Omok/joinRoom.html"><button>방 들어가기</button></a>
+    <a href="/Omok/index.jsp"><button>방 들어가기</button></a>
     <a href="/Omok/myPage.html"><button>마이페이지</button></a>
 </body>
 </html>
